<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="1.9"
    android:background="@drawable/gradient_pink_orange"
    app:layout_anchorGravity="center"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundGravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|fill"
                android:gravity="center|clip_vertical"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="294dp"
                    android:layout_height="82dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/mybutton"
                    android:onClick="onClickStart"
                    android:text="@string/Button_Start"
                    android:textColor="#000000"
                    android:textIsSelectable="false"
                    android:textSize="24sp"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="294dp"
                    android:layout_height="82dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/mybutton"
                    android:onClick="onClickYourCollection"
                    android:text="@string/YourCollection"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="294dp"
                    android:layout_height="82dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/mybutton"
                    android:onClick="onClickDBInsert"
                    android:text="@string/CollSettings"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="294dp"
                    android:layout_height="82dp"
                    android:layout_gravity="center"
                    android:background="@drawable/mybutton"
                    android:onClick="onClickAbout"
                    android:text="@string/Button_Info"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:visibility="visible" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="@string/RevInfoBum"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>